fix: fix mobile popup styling to prevent close and fullscreen overlap

--- a/src/components/Identify.css
+++ b/src/components/Identify.css
@@ -1,19 +1,3 @@
-arcgis-feature .esri-feature {
-  background: none;
-}
-
-h2.esri-feature__title.esri-widget__heading {
-  @apply px-2 text-center text-2xl md:text-xl;
-}
-
-.esri-feature-content table {
-  @apply border-separate border-spacing-y-2 text-xl md:text-lg;
-}
-
-.esri-feature-content table td:first-child {
-  @apply pr-2 text-right align-text-top font-bold;
-}
-
 .esri-popup__main-container {
   @apply !w-[400px];
 }
